--- a/Implementacion/proySC/public/css/layout/compra.css
+++ b/Implementacion/proySC/public/css/layout/compra.css
@@ -1,28 +1,34 @@
 .compraContainer .bloqueFactura{
 	margin: 5px;
-	padding: 5px;
+	
 	border: 1px solid black;
 }
 
 .compraContainer .azul{
-	background-color: rgb(101, 153, 255);
+	/*background-color: rgb(101, 153, 255);*/
+	background-color: #CCCCCC;
 }
 
 .compraContainer .azulOscuro{
-	background-color: rgb(25, 69, 156);
+	/*background-color: rgb(25, 69, 156);*/
+	background-color: #000033;
 }
 
 .compraContainer .crema{
-	background-color: rgb(255, 250, 85);
+	/*background-color: rgb(255, 250, 85);*/
+	background-color: #CCCCCC;
 }
 
 .compraContainer .titulo{
 	text-align: left;
-	color: black;
+	color: white;
 	font-weight: bold;
 	font-size: 15px;
-	line-height: 20px;
+	line-height: 23px;
 	font-family: Tahoma;
+	background-color: #000033;
+	padding: 3px;
+	margin-bottom: 10px;
 }
 
 .searchIcon {
